# travel-backpack

./: .gitignore  README.md  README.rst  bumpversion.py  pyproject.toml  setup.py  tox.ini
pip-wheel-metadata/: travel_backpack-0.1.0-py3-none-any.whl
pip-wheel-metadata/travel_backpack-0.1.0.dist-info/: METADATA  RECORD
travel_backpack/: __init__.py  __main__.py  decorators.py  exceptions.py  graph.py  logging.py  parallel.py  plotly_visualize.py  time.py  variables.py
