[tool.poetry]
name = "travel-backpack"
version = "0.9.0"
description = "Some very useful functions and classes to use in day-to-day"
authors = ["Victor Marcelino"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/vMarcelino/travel-backpack"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
